Fix for BTWCT-598 and fix for search results alignment

--- a/waters-aem-frontend/src/styles/filters.scss
+++ b/waters-aem-frontend/src/styles/filters.scss
@@ -266,7 +266,7 @@
         }
     }
     &__emptytags {
-        height: 0.5em;
+        height: 0;
     }
 }
 
